# TRIAD

./: CHANGELOG.md  COLAB_SETUP.md  CONTRIBUTING.md  Cargo.toml  ETHEREUM_LAYERS_EN.md  LICENSE  Makefile  README.interference.md  README.md  README.ml.md  README.quantum.md  README.security.md  README.tokenomics.md  README.web3.md  TRIAD_PITCH_DECK.md  simple_launch.sh  test_token.sh
.github/devcontainer/: devcontainer.json
.github/workflows/: deploy-pages.yml
examples/: Testnet.rs  comprehensive_demo.rs  consensus_analysis.rs  demo_work.rs  energy_metrics.rs  network_chat.rs  quantum_consensus_demo.rs  quantum_metrics.rs  quantum_network_demo.rs
logs/: triad-node-0_codespace_id
scripts/: check_distributed_network.sh  github_config.sh  launch_distributed_network.sh  stop_distributed_network.sh  view_codespace_logs.sh
site/: .gitignore  .pages-trigger  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
site/.astro/: settings.json
site/.github/workflows/: deploy-pages.yml
site/src/components/: DarkVeil.css  DarkVeil.tsx  Hero.astro  Innovations.css  Innovations.tsx  MagicBento.tsx  StartPanel.tsx
site/src/layouts/: BaseLayout.astro
site/src/pages/: _app.tsx  _template.astro  about.astro  contacts.astro  documentation.astro  github.astro  ideas.astro  index.astro  innovations.astro  pitchdeck.astro  roadmap.astro  rss.xml.js  start.astro  structure.astro  whitepaper.astro
site/src/styles/: global.css
src/: lib.rs  main.rs
src/dag/: mod.rs
src/error_analysis/: mod.rs  semantic.rs
src/github/: mod.rs
src/network/: discovery.rs  error.rs  error_analysis.rs  handler.rs  http_client.rs  http_server.rs  message.rs  mod.rs  node.rs  peer.rs  quantum_handler.rs  real_node.rs  transport.rs  types.rs  websocket_client.rs  websocket_server.rs
src/network/discovery/: compression.rs  dht.rs  gossip.rs  mod.rs  quic_transport.rs  sharding.rs  state_sync.rs
src/quantum/: consensus.rs  field.rs  interference.rs  mod.rs  opencl.rs  prob_ops.rs  tests.rs
src/quantum/kernels/: interference.cl
src/semantic/: mod.rs
src/sharding/: README.md  mod.rs  test_sharding.rs
src/token/: mod.rs
src/transaction/: mod.rs  processor.rs  storage.rs
